--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 03:05:07 2018</p>
+         Last Run: Mon Nov 26 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>97</td>
                      </tr>
                      <tr>
@@ -46,7 +46,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -58,7 +58,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "75",
-                 "76"
+                 "78",
+                 "76",
+                 "77"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 03:05:07 2018</p>
+         Last Run: Mon Nov 26 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "74",
-                 "77"
+                 "75",
+                 "78"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 03:05:07 2018</p>
+         Last Run: Mon Nov 26 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>80</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "72",
                  "69",
                  "68"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "78",
-                 "80"
+                 "76",
+                 "79",
+                 "81"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 03:05:07 2018</p>
+         Last Run: Mon Nov 26 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -691,11 +691,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>8</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "71",
-                 "65",
-                 "61"
+                 "66",
+                 "62"
                ]
              },
              {
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "84",
-                 "75",
-                 "67"
+                 "76",
+                 "68"
                ]
              }
            ]
