--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 05:05:03 2018</p>
+         Last Run: Mon Nov 26 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,23 +32,23 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>-2</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SSW</td>
+                        <td>13</td>
+                        <td>SW</td>
                         <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
+                        <td>-1</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>5</td>
-                        <td>76</td>
-                        <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
                         <td>98</td>
                      </tr>
@@ -57,8 +57,8 @@
                         <td>Overcast</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>4</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-2",
                  "-1",
-                 "0",
                  "0"
                ]
              },
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "76",
-                 "77"
+                 "77",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 05:05:03 2018</p>
+         Last Run: Mon Nov 26 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "72",
                  "73",
-                 "75",
-                 "78"
+                 "77"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "4",
-                 "4"
+                 "13",
+                 "11",
+                 "10"
                ]
              }
            ]
@@ -439,7 +439,222 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 05:05:03 2018</p>
+         Last Run: Mon Nov 26 06:05:08 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>65</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>7</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>8</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>NNE</td>
+                        <td>64</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-6",
+                 "-6",
+                 "-6"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-3",
+                 "-3",
+                 "-3"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "6",
+                 "7",
+                 "8"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "69",
+                 "66",
+                 "66"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "65",
+                 "63",
+                 "64"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Mon Nov 26 06:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,51 +675,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>21</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>84</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>8</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>76</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>8</td>
-                        <td>62</td>
+                        <td>34</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>68</td>
+                        <td>86</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>15</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>83</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>8</td>
+                        <td>61</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -571,12 +786,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -590,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "8",
+                 "34",
+                 "15",
                  "8"
                ]
              },
@@ -601,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "72",
                  "66",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -612,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "76",
-                 "68"
+                 "86",
+                 "83",
+                 "80"
                ]
              }
            ]
